Refactor gradient handling and glyph rendering
- Removed `GradientGlyphsTest` as it is no longer needed.
- Updated `NametagGlyphVisitorTest` to simplify color handling for nametag glyphs.
- Modified `RankGradientAnimationTest` to improve color registration and decoration handling.
- Introduced `GradientTagHolder` interface to allow `TextColor` to carry rank decoration tags.
- Added `SheetGlyphBounds` interface to define glyph bitmap edges.
- Implemented `BakedSheetGlyphMixin` to provide shadow and glyph bounds for gradient rendering.
- Created `FontManagerMixin` to refresh nametag layouts on font changes.
- Enhanced `GlyphInstanceMixin` to manage gradient drawing for glyphs.
- Developed `TextColorMixin` to support gradient tags in text colors.
- Added `GradientPainter` utility to manage gradient color application during glyph rendering.
- Introduced `GradientPainterTest` to validate gradient color application in glyph rendering.